--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,5 @@ jsonwebtoken = "9"
 chrono = "0.4"
 
 bdk = { version = "0.28", features = ["all-keys"] }
+
+reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
