--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,4 +22,7 @@ chrono = "0.4"
 
 bdk = { version = "0.28", features = ["all-keys"] }
 
+
 reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
+bitcoin = "0.30.2"
+address = "0.14.0"
