--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,4 @@ bdk = { version = "0.28", features = ["all-keys"] }
 reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
 bitcoin = "0.30.2"
 address = "0.14.0"
+secp256k1 = "0.24.3"
