--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
 bitcoin = "0.30.2"
 address = "0.14.0"
 secp256k1 = "0.24.3"
+sha2 = "0.11.0-rc.0"
