--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,6 @@ bitcoin = "0.30.2"
 address = "0.14.0"
 secp256k1 = "0.24.3"
 sha2 = "0.11.0-rc.0"
+k256 = { version = "0.13", features = ["schnorr"] }
+hex = "0.4.3"
+hex-literal = "1.0.0"
